# qiyu2DX-Speedy-config-invert

./: .gitignore  CMakeLists.txt  README.md  build.sh
build_uf2/: iidx.uf2  p1.uf2
src/: controller_config.h  usb_descriptors.c
